# whisper

./: .gitignore  index.html  input.txt  script.js  style.css  ui.html  ui.js
whisper-server/: Cargo.toml
whisper-server-ssl/: Cargo.toml
whisper-server-ssl/src/: main.rs
whisper-server/src/: events.rs  main.rs
