[package]
name = "whisper-server-ssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = {features = ["websocket"]}
tokio = {features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
tracing-subscriber = "0.3.18"